Make file added and functions work better

--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=432,363
+Pos=432,354
 Size=400,400
 Collapsed=1
 
@@ -12,14 +12,54 @@ Pos=332,174
 Size=600,400
 
 [Window][Themes]
-Pos=60,60
+Pos=167,171
 Size=165,120
 
 [Window][PvP]
-Pos=299,103
-Size=500,500
+Pos=332,124
+Size=600,500
 
 [Window][Survival]
-Pos=126,35
-Size=1000,1000
+Pos=332,124
+Size=600,500
+
+[Window][Error !!]
+Pos=372,3
+Size=400,400
+
+[Window][Survaival]
+Pos=332,124
+Size=600,500
+
+[Window][Score Board]
+Pos=332,124
+Size=600,500
+
+[Window][Score Board Easy]
+Pos=332,124
+Size=600,500
+
+[Window][Score Board Medium]
+Pos=332,124
+Size=600,500
+
+[Window][Score Board Hard]
+Pos=332,124
+Size=600,500
+
+[Window][????]
+Pos=432,224
+Size=400,300
+
+[Window][##]
+Pos=432,224
+Size=400,300
+
+[Window][Choose the right answer]
+Pos=232,124
+Size=800,500
+
+[Window][Loading . . . . . ]
+Pos=332,124
+Size=600,500
 
